added title and changed background image location

--- a/justus.css
+++ b/justus.css
@@ -1,5 +1,5 @@
 body{
-	background-image: url("file:///home/justus/HTML_CSS/myWebSite/bgimage.jpg");
+	background-image: url("bgimage.jpg");
 	background-position: fixed;
 	background-size: cover;
 
