--- a/justus.css
+++ b/justus.css
@@ -1,33 +1,43 @@
 body{
     /*background-image: url("image2.jpg");*/
-
+	background-color: #1C1C1C;
 	background-position: fixed;
 	background-size: cover;
 	margin: 0px;
 	padding: 0px;
+	color: white;
+	padding-top: 8%;
 
+}
+
+.summary-area{
+	text-align: center;
 }
 
 iframe{
 	background-color: transparent;
 }
 
-nav {
+nav, nav ul a{
 	background-color: transparent;
-	text-align: center;
-	
+  /*color: white;*/
 }
 
-.nav-wrapper a{
-	
-	color: black;
+canvas#buyers{
+	width: 100%;
+	height: 300px;
 }
+
+/*.nav-wrapper a{
+
+	color: black;
+}*/
 
 .mybox{
 	min-height: 500px;
 	max-width: 900px;
-	
-    
+
+
 }
 
 .logo{
@@ -35,22 +45,22 @@ nav {
 }
 
 .logo h3{
-	
+
 	text-align: center;
 }
 
 #typed{
-	color: black;
+
 	font-size: 40px;
 }
 
 #typed1{
-	color: #76ff03;
+
 	font-size: 40px;
 }
 
 #typed2{
-	color: black;
+
 	font-size: 40px;
 }
 
